<resources>
    <string name="app_name">md-kotlin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_contact">Add Contact</string>
    <string name="add_full_name">Full name</string>
    <string name="add_contact_number">Contact Number</string>
    <string name="org_code">Organization code</string>
    <string name="save_contact">Save Contact</string>
    <string name="added_contact">caontact has been added succesfully</string>
    <string name="error">%1$s</string>
</resources>